--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@angular/compiler-cli": "^16.2.0",
     "@cypress/schematic": "^2.5.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.4",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "cypress": "^13.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
